# cxf1

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package.json
.openai/: hosting.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  demo_data.py  excel_writer.py  main.py  models.py  parsers.py  pipeline.py  quality.py  rule_engine.py  schemas.py  security.py  storage.py
backend/tests/: test_access_guard.py  test_pipeline.py  test_security.py  test_zip_guard.py
deploy/: build-sites-dist.mjs  sites-static-server.mjs
docs/: architecture.md  github-safety.md  github-upload.md  live-recruiter-demo.md  portfolio-case-study.md  resume-summary.md  runbook.md
docs/superpowers/plans/: 2026-07-17-evidence-and-dual-demo-plan.md  2026-07-17-real-backend-recruiter-demo.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/evidence/: page.tsx
frontend/app/quality/: page.tsx
frontend/components/: AppShell.tsx  ExcelDownloadButton.tsx  MetricCard.tsx  QualityChart.tsx  SampleDownloadButton.tsx  TaskTable.tsx  Timeline.tsx  UploadPanel.tsx
frontend/lib/: api.ts  demo-data.ts  evidence.ts  live-api.ts  types.ts
frontend/scripts/: contract-test.mjs
samples/: synthetic_orders.json  synthetic_sku_rules.csv  synthetic_truth.json
scripts/: check_repository_safety.py  start-backend.cmd  start-dev-windows.cmd  start-frontend.cmd  start-live-recruiter-demo.cmd  stop-dev-windows.cmd  stop-dev-windows.ps1
(+5 files in other folders)
