[project]
name = "portfolio-order-agent-demo-backend"
version = "0.1.0"
description = "Sanitized FastAPI backend for an AI order processing portfolio demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11.0",
  "pypdf>=4.0.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100

